--- a/personal-budget-frontend/cypress/tsconfig.json
+++ b/personal-budget-frontend/cypress/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "sourceMap": false,
     "types": ["cypress"],
-    "baseUrl": "http://localhost:4200"
+    "baseUrl": "http://0.0.0.0:4200"
   },
   "exclude": [
   ]
