--- a/personal-budget-frontend/package.json
+++ b/personal-budget-frontend/package.json
@@ -2,7 +2,8 @@
   "name": "personal-budget-frontend",
   "version": "0.0.0",
   "engines": {
-    "node": "20.11.0"
+    "node": "20.11.0",
+    "npm": "10.2.4"
     },
   "scripts": {
     "ng": "ng",
