--- a/personal-budget-frontend/package.json
+++ b/personal-budget-frontend/package.json
@@ -36,7 +36,10 @@
     "ng2-charts": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "@angular/cli": "^17.1.3",
+    "@angular/compiler-cli": "^17.1.0",
+    "typescript": "~5.3.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.1.3",
