--- a/personal-budget-frontend/tsconfig.spec.json
+++ b/personal-budget-frontend/tsconfig.spec.json
@@ -3,7 +3,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "baseUrl": "http://0.0.0.0:4200",
+    "baseUrl": "https://0.0.0.0:4200",
     "types": [
       "jasmine"
     ]
